--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 
-  <html lang="pt-BR">
-    
+ <html lang="pt-BR">
+
 <head>
-    
-     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Aluraflix</title>
+    <title>Guiminamflix</title>
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <header>GUIMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
             <p>#homem-aranha</p>
         </div>
 
@@ -27,10 +27,11 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-        <section class="categoria">
+
+    <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-          <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
@@ -49,3 +50,5 @@
     </section>
 
 </body>
+
+</html>
